These are the Release Notes for post-revision 2.4.5 of netperf:

*) Fix the configure script to know it does not have to look for an 
   SCTP library on FreeBSD 8.X

*) The BSD and "omni" tests now have a test-specific -R option which
   is a boolean controlling whether or not SO_DONTROUTE will be set on
   the data socket.  By default, any unidirectional UDP test will have
   SO_DONTROUTE set unless a -R 1 option is given.  All other tests
   (including UDP request/response tests) will not have SO_DONTROUTE
   set unless a -R 0 option is given.  This is put into place to make
   it take longer for blithering idiots to shoot themselves in the
   foot by running tests on setups they shouldn't.

*) At least the beginnings of support for RDS, based on a circa 2007
   patch against 2.4.2 by Vladimir Sokolovsky. Rather than create the
   "RDS_STREAM" test of his patch, the intention this time around is
   to enable RDS for the "omni" tests by using an omni test-specific
   -T rds specifyer for the "transport" to use.

*) Missing fprintf format statements provided by Bruno Cornec

*) Numerous cleanups from Jose Pedro Oliveira

*) Fixes to allow netperf -H ::1 to work without having to add -6 or
    an AF_INET6 -L option

These are the Release Notes for Revision 2.4.5 of netperf:

Things changed in this release:

*) Fixes for Linux procstat-based CPU utilization on newer kernels
   from Andrew Gallatin.

*) Fix for a TCP_RR hang from Michael Shuldman

*) Compilation cleanups for MingW cnd MSDOS (djgpp) ourtesy of Gisle
   Vanem.

*) Changes to enable compilation and building of netperf for
   VMware. Kudos to the person who did the first port, I will be happy
   to name that person when told it is OK :)

*) Fixes from Adam Bidema for launching netserver children when the
   path to netserver.exe is very long.  

*) For the first time, netperf2 has a dependency, albeit optional, on
   another non-base-os bit of code - libsmbios under Linux.  It will